--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -26,13 +27,15 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:id="@+id/get_started"
             android:background="#AECEE4"
+            android:layout_height="50dp"
+            android:onClick="onGetstartedClicked"
             android:gravity="center"
-            android:onClick="onLoginClicked"
-            android:text="GET Started"
+            android:text="GET STARTED"
+            android:textColor="#FFFFFF"
             android:textSize="18dp"
+            android:textStyle="bold"
             android:visibility="gone" />
 
 
